--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ cloud_processor.pyc
 cloud_service.pyc
 configuration_service.pyc
 .DS_Store
+google_cloud_service.pyc
+voice_codes_constants.pyc
+google_appspotserver/main.pyc
