--- a/configuration.json
+++ b/configuration.json
@@ -1,3 +1,10 @@
 {
-    "language": "en-US"
+    "language": "en-US",
+    "sensitivity": {
+        "hello": 5,
+        "explore": 5,
+        "speak_english": 5,
+        "speak_french": 5,
+        "speak_german": 5
+    }
 }
